--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
     <groupId>cs.msu.edu</groupId>
-    <artifactId>CSCI 440 Project</artifactId>
+    <artifactId>CSCI_440_Project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
@@ -15,7 +15,13 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+            </plugin>
         </plugins>
+        <finalName>maven-unit-test</finalName>
     </build>
     <dependencies>
         <dependency>
