--- a/src/yardstick-archive/package.json
+++ b/src/yardstick-archive/package.json
@@ -27,7 +27,8 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {},
   "autoload": {
