--- a/src/yardstick-archive/package.json
+++ b/src/yardstick-archive/package.json
@@ -5,8 +5,8 @@
   "description": "The fullstack application boilerplate for Adonisjs",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "node ace test"
+    "start": "node ace test",
+    "test": "jest"
   },
   "keywords": [
     "adonisjs",
@@ -19,18 +19,24 @@
     "@adonisjs/ace": "^5.0.8",
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "^2.0.5",
+    "@adonisjs/cli": "^4.0.13",
     "@adonisjs/cors": "^1.0.7",
-    "@adonisjs/fold": "^4.0.9",
+    "@adonisjs/fold": "^4.1.0",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.2.1",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
+    "cors": "^2.8.5",
+    "fold": "^0.11.1",
     "mysql": "^2.18.1",
+    "sqlite3": "^5.0.2",
     "tailwindcss": "^2.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
   "autoload": {
     "App": "./app"
   }
